// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly h3 tag with text 1`] = `
<h2
  className=""
>
  Header
</h2>
`;

exports[`renders correctly with custom class 1`] = `
<h2
  className="test-class"
>
  Header
</h2>
`;
